revert project/SparkBuild.scala