@@ -100,24 +100,6 @@ object SparkBuild extends PomBuild {
     if (profiles.contains("jdwp-test-debug")) {
       sys.props.put("test.jdwp.enabled", "true")
     }
-    if(profiles.contains("jdk-17")) {
-      val extraJavaTestArgs = Set("--add-opens java.base/java.nio=ALL-UNNAMED",
-        "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-opens java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens java.base/java.nio=ALL-UNNAMED",
-        "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-opens java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens java.base/java.util=ALL-UNNAMED",
-        "--add-opens java.base/sun.security.action=ALL-UNNAMED",
-        "--add-opens java.base/sun.util.calendar=ALL-UNNAMED",
-        "--add-opens java.base/java.lang=ALL-UNNAMED",
-        "--add-opens java.base/sun.nio.cs=ALL-UNNAMED",
-        "--add-opens java.base/java.net=ALL-UNNAMED",
-        "--add-opens java.base/java.io=ALL-UNNAMED",
-        "--add-opens java.base/java.util.concurrent=ALL-UNNAMED",
-        "--add-exports java.base/jdk.internal.util.random=ALL-UNNAMED").mkString(" ", " ", " ")
-      sys.props.put("test.jdk-17.extraJavaTestArgs", extraJavaTestArgs)
-    }
     profiles
   }
 
@@ -1145,8 +1127,7 @@ object TestSettings {
     // SPARK-29282 This is for consistency between JDK8 and JDK11.
     (Test / javaOptions) ++= {
       val metaspaceSize = sys.env.get("METASPACE_SIZE").getOrElse("1300m")
-      val extraJavaTestArgs = sys.props.getOrElse("test.jdk-17.extraJavaTestArgs", "")
-      s"-Xmx4g -Xss4m -XX:MaxMetaspaceSize=$metaspaceSize -XX:+UseParallelGC -XX:-UseDynamicNumberOfGCThreads -XX:ReservedCodeCacheSize=128m $extraJavaTestArgs"
+      s"-Xmx4g -Xss4m -XX:MaxMetaspaceSize=$metaspaceSize -XX:+UseParallelGC -XX:-UseDynamicNumberOfGCThreads -XX:ReservedCodeCacheSize=128m"
         .split(" ").toSeq
     },
     javaOptions ++= {
